--- a/pictures/templates/newpost.html
+++ b/pictures/templates/newpost.html
@@ -1,9 +1,22 @@
 {% extends 'base.html' %}
+{% load bootstarap4 %}
 
 
 {% block context %}
-    
+{{block.super}}
+
+<div class="container-fluid">
+
+    <form  action="{%url 'newPost'%}" method="post">
+      {%csrf_token%}
+  
+      {% bootstrap_form letterForm layout='inline' %}
+      <input type="submit" value="Subscribe">
+    </form>
+  
+  </div>
+
     
 {% endblock context %}
-    
+
     
