--- a/pictures/templates/navbar.html
+++ b/pictures/templates/navbar.html
@@ -1,11 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Instagram-Pic</a>
+      <a class="navbar-brand" href="#">My Instagram</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse ml-auto pr-4" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0  ml-auto pr-4">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="{% url 'home' %} ">Home</a>
           </li>
