changes in our model

--- a/pictures/templates/base.html
+++ b/pictures/templates/base.html
@@ -10,6 +10,14 @@
     
     {% block styles %}
         {% bootstrap_css %}
+        <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="/your-path-to-fontawesome/css/fontawesome.css" rel="stylesheet">
+        <link href="/your-path-to-fontawesome/css/brands.css" rel="stylesheet">
+        <link href="/your-path-to-fontawesome/css/solid.css" rel="stylesheet">
+
     {% endblock styles %}
         
    
@@ -18,7 +26,6 @@
     
     {% block content %}
     {% include 'navbar.html' %}
-        <h1>Instagram</h1>
     {% endblock content %}
 
 
