--- a/pictures/templates/newpost.html
+++ b/pictures/templates/newpost.html
@@ -5,16 +5,35 @@
 {% block context %}
 {{block.super}}
 
-<div class="container-fluid">
 
-    <form  action="{%url 'newPost'%}" method="post">
-      {%csrf_token%}
+
   
-      {% bootstrap_form letterForm layout='inline' %}
-      <input type="submit" value="Subscribe">
-    </form>
-  
-  </div>
+  {% for images in image_posts %}
+
+  <div class="modal fade " id="{{image.id}}" tabindex="-1" role="dialog"
+                 aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-md" role="document">
+                    <div class="modal-content modalcard">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="imageheader">{{image_posts.photos}}</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        
+                        <div class="modal-body">
+                            <img src="{{image_posts.image.url}}" alt="{{image_name}}" class="img-fluid">
+                            <p class="imgdesc text-center">{{image_posts.image_name}}</p>
+                            <span class="btn btn-sm btn-outline-success">{{image_posts.image_caption}}</span> <a
+                                href="" class="btn btn-sm btn-outline-info">{{image_posts.likes}}</a>
+                        </div>
+                        
+                       
+                    </div>
+                </div>
+    </div>
+
+{% endfor %}
 
     
 {% endblock context %}
