--- a/pictures/templates/home.html
+++ b/pictures/templates/home.html
@@ -29,7 +29,7 @@
 
                         </div>
                         <div class="post_location">
-                            Nairobi
+                            {{photo.location}}
 
                         </div>
                     </div>
@@ -54,9 +54,9 @@
                     <a href=""><h2>{{photo.image_name}}</h2> </a>
                     <span><p>{{photo.image_caption}}</p> </span>
                 </div>
-                <div class="time_posted">
+                <!-- <div class="time_posted">
                     {{photo.created_date |timesince}} ago
-                </div>
+                </div> -->
             </div>
             <!-- <div class="row">
                 <div class="col-md-4">
