--- a/pictures/templates/newpost.html
+++ b/pictures/templates/newpost.html
@@ -5,35 +5,41 @@
 {% block context %}
 {{block.super}}
 
+<div class="container">
+    <form action="." method="post"  enctype="multipart/form-data">
 
+        {% csrf_token %}
+        {{form.as_p}}
+       
+        <button type="submit" class="btn btn-lg btn-success">Upload</button>
+    </form>
+    
+    {% if obj %}
+        <h3>Succesfully uploaded : {{img_obj.caption}}</h3>
+        <img src="{{ obj.image.url}}" alt="image" class="img-thumbnail"  >
+        {% endif %}
+        <hr>
+
+      
+        {% for x in img %}
+        {% if forloop.first %}<div class="row ">{% endif %}
+            <div class="col-lg-4 col-md-4 col-12" >
+        <div class="text-center mt-2">
+            <img src="{{x.image.url}}"  height="70%" width="70%" class="img-thumbnail" alt="...">
+            <h2 class="text-center" >{{x.caption}}</h2></div>
+            </div>
+            {% if forloop.counter|divisibleby:3 %}
+        </div>
+        <div class=row>{% endif %}
+        
+            {% if forloop.last %}</div>{% endif %}
+    
+        {% endfor %}
+
+</div>
 
   
-  {% for images in image_posts %}
-
-  <div class="modal fade " id="{{image.id}}" tabindex="-1" role="dialog"
-                 aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered modal-md" role="document">
-                    <div class="modal-content modalcard">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="imageheader">{{image_posts.photos}}</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        
-                        <div class="modal-body">
-                            <img src="{{image_posts.image.url}}" alt="{{image_name}}" class="img-fluid">
-                            <p class="imgdesc text-center">{{image_posts.image_name}}</p>
-                            <span class="btn btn-sm btn-outline-success">{{image_posts.image_caption}}</span> <a
-                                href="" class="btn btn-sm btn-outline-info">{{image_posts.likes}}</a>
-                        </div>
-                        
-                       
-                    </div>
-                </div>
-    </div>
-
-{% endfor %}
+  
 
     
 {% endblock context %}
