--- a/pictures/templates/newpost.html
+++ b/pictures/templates/newpost.html
@@ -7,7 +7,7 @@
 
 <div class="container">
     <h1> Welcome</h1>
-    <form action="" method="post"  enctype="multipart/form-data">
+    <form action="" method="post"  enctype="multipart/form-data" novalidate>
 
         {% csrf_token %}
         {% bootstrap_form form layout='inline' %}
