changes in view

--- a/pictures/templates/home.html
+++ b/pictures/templates/home.html
@@ -39,10 +39,10 @@
 
                 </div>
                 <div class="post_image">
-                    <img src="{{photo.image.url}} " alt="">
+                    <img src="{{photo.image.url}} " class="img-responsive" alt="">
                 </div>
                 <div class="engagement">
-                    <a href=""><i class="fal fa-heart"></i></a>
+                    <a href=""><i class="far fa-heart"></i></a>
                     <a href=""><i class="fas fa-comment"></i></a>
                     <a href=""><i class="fas fa-share-square"></i></a>
                     <a href=""><i class="far fa-save"></i></a>
