--- a/pictures/static/css/styles.css
+++ b/pictures/static/css/styles.css
@@ -63,15 +63,16 @@
 .post_option{
     font-size: 15px;
     float: right;
-    display: inline-block;
+    /* display: inline-block; */
     margin: 4px;
     padding:5px;
     color: white; 
 }
-.post_image{
+/* .post_image{
     width: 100%;
     height: 600px;
-}
+
+} */
 .engagement{
     display: inline-block;
     width: 100%;
