--- a/pictures/templates/navbar.html
+++ b/pictures/templates/navbar.html
@@ -14,7 +14,7 @@
           </li>
           
           
-        </ul>
+        </ul>        
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
@@ -32,10 +32,10 @@
                 <a href="{% url 'home' %}">Home</a>
               </li>
               <li>
-                <a href="accounts/register/registration_form/">Login</a>
+                <a href="accounts/register/">Register</a>
               </li>
               <li>
-                <a href="accounts/register/login/">Logout</a>
+                <a href="accounts/login/">Login</a>
               </li>
             </ul>
           </li>
