--- a/pictures/templates/navbar.html
+++ b/pictures/templates/navbar.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse ml-auto pr-4" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0  ml-auto pr-4">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %} ">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'home' %} "><i class="fab fa-instagram"></i></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'NewPost'%} "> New Post</a>
@@ -29,7 +29,7 @@
                   </a>
             <ul class="dropdown-menu" role="menu">
               <li>
-                <a href="{% url 'home' %}">Home</a>
+                <a href="{% url 'profile' %}">Profile</a>
               </li>
               <li>
                 <a href="accounts/register/">Register</a>
