--- a/pictures/templates/home.html
+++ b/pictures/templates/home.html
@@ -42,7 +42,7 @@
                     <img src="{{photo.image.url}} " class="img-responsive" alt="">
                 </div>
                 <div class="engagement">
-                    <a href=""><i class="far fa-heart"></i></a>
+                    <a href=""><i class="fas fa-heart"></i></a>
                     <a href=""><i class="fas fa-comment"></i></a>
                     <a href=""><i class="fas fa-share-square"></i></a>
                     <a href=""><i class="far fa-save"></i></a>
